# loadr

./: .gitignore  .gitleaks.toml  .releaserc.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  action.yml  deny.toml  lefthook.yml  package.json
.github/workflows/: acceptance.yml  action-selftest.yml  ci.yml  publish-plugins.yml  release.yml  security.yml
Formula/: loadr.rb
aws-setup/: main.tf
book/: PROPOSAL.adoc  atlas.json  preface.adoc
book/chapters/: appx-a.adoc  appx-b.adoc  appx-c.adoc  ch01.adoc  ch02.adoc  ch03.adoc  ch04.adoc  ch05.adoc  ch06.adoc  ch07.adoc  ch08.adoc  ch09.adoc  ch10.adoc  ch11.adoc  ch12.adoc  ch13.adoc  ch14.adoc  ch15.adoc  ch16.adoc  ch17.adoc  ch18.adoc
bucket/: loadr.json
crates/loadr-agent/: Cargo.toml
crates/loadr-ai/: Cargo.toml
crates/loadr-ai/src/: anthropic.rs  generate.rs  lib.rs  prompt.rs  provider.rs
crates/loadr-browser/: Cargo.toml
crates/loadr-cli/: Cargo.toml
crates/loadr-config/: Cargo.toml
crates/loadr-convert/: Cargo.toml
crates/loadr-convert/src/: accesslog.rs  jmx.rs  k6.rs  lib.rs
crates/loadr-convert/tests/: jmx_tests.rs  k6_tests.rs
crates/loadr-core/: Cargo.toml  build.rs
crates/loadr-gen/: Cargo.toml
crates/loadr-gen/src/: example.rs  fuzz.rs  graphql.rs  grpc.rs  lib.rs  openapi.rs  postman.rs
crates/loadr-gen/tests/: graphql.rs  grpc.rs  openapi.rs  postman.rs
crates/loadr-history/: Cargo.toml
crates/loadr-history/src/: lib.rs  stats.rs  store.rs
crates/loadr-history/tests/: store.rs
crates/loadr-js/: Cargo.toml
crates/loadr-outputs/: Cargo.toml  build.rs
crates/loadr-payload/: Cargo.toml
crates/loadr-payload/src/: lib.rs
crates/loadr-plugin-api/: Cargo.toml  default_14573620010301771513_0_1775603.profraw  default_14573620010301771513_0_1775634.profraw  default_3370748217869519995_0_1775603.profraw
crates/loadr-protocols/: Cargo.toml
crates/loadr-record/: Cargo.toml
crates/loadr-record/src/: ca.rs  har.rs  lib.rs  proxy.rs
crates/loadr-record/tests/: recorder.rs
demos/2m-rps/: .gitignore  HANDOFF.md  README.md
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: agents.yaml  controller.yaml
design/: 01-spec-driven-generation.md  02-results-intelligence.md  03-ai-copilot.md  04-trace-driven-rca.md  05-resilience-gameday.md  README.md
desktop/: package-lock.json  package.json
desktop/e2e/: canvas-walk.mjs  canvas.spec.ts  convert-walkthrough.mjs  demo-walkthroughs.mjs  gen-routes.py  prep-demo-plan.py  prep-example-plan.py  serve-grpc.py  serve-target.py
docs/: book.toml  custom-grpc-plugin-feeder.md  loadr-s3-tower-bypass.md  plugin-on-demand-data-implementation-plan.md
docs/src/: SUMMARY.md  credits.md  introduction.md  webui.md
docs/theme/: head.hbs
examples/: 15-distributed.yaml  16-flow-control.yaml  17-feeders-and-throttle.yaml  18-sse.yaml  19-redis.yaml  20-browser.yaml  21-http-advanced.yaml  22-lifecycle.yaml  23-tags.yaml  25-check-chains.yaml  26-failure-breakdown.yaml  36-auth-tokens.yaml  37-file-uploads.yaml  38-cookies-session.yaml  39-custom-metrics.yaml  40-scenario-weights.yaml  41-functional-test.yaml  42-soap.yaml  43-twirp.yaml  44-compare-and-gate.yaml  45-sweep.yaml  46-slo-thresholds.yaml  47-system-observe.yaml  48-chaos.yaml  49-payload-complexity.yaml  50-plugin-data-source.yaml  51-plugin-data-source-throughput.yaml
examples/cicd/: README.md  github-actions.yml  perf-smoke.yaml
examples/data/: skus.json  upload.txt
examples/harness/: README.md  docker-compose.yml
examples/k8s/: Dockerfile  README.md  agents.yaml  controller.yaml  run-job.yaml
examples/prometheus-grafana/: README.md  docker-compose.yml  grafana-dashboard.json  loadr.yaml  prometheus.yml
examples/scripts/: auth.js  custom-metrics.js  helpers.js  lifecycle.js
examples/specs/: petstore.yaml
goals/perf-round-three/: README.md  feeder-ffi-offload.md  feeder-row-marshalling.md  feeder-seq-counter.md  grpc-encode-once.md  grpc-template-precompile.md
goals/perf-round-two/: README.md  aws-ab-validation.md  grpc-test-gaps.md  (+6 more)
plugins/: index.json
plugins/examples/native-data-source/: Cargo.toml  plugin.toml
plugins/examples/native-data-source/src/: lib.rs
producthunt-pack/: README.md
scripts/: run-examples.sh  set-version.sh
site/: 404.html  build-blog.py  build-demos.py  build-examples-index.py  build-plugins.py  demos.html  deploy.sh  downloads.html  index.html
(+433 files in other folders)
