[package]
name = "loadr-ai"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "AI copilot for loadr: natural-language → validated scenario, provider-agnostic"

[dependencies]
loadr-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
