[package]
name = "loadr-convert"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false  # proprietary (Elastic-2.0); never publish to crates.io
description = "Convert JMeter .jmx test plans and k6 scripts into loadr YAML test definitions"

[dependencies]
loadr-config = { workspace = true }
quick-xml = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
