[package]
name = "loadr-gen"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Generate a loadr scenario from an API contract (OpenAPI, and more) with schema-derived example data"

[dependencies]
loadr-config = { workspace = true }
loadr-convert = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
loadr-payload = { workspace = true }

[dev-dependencies]
loadr-config = { workspace = true }
