[package]
name = "loadr-history"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Durable run-history store + statistical regression detection for loadr"

[dependencies]
loadr-core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
