[package]
name = "loadr-payload"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Adversarial payload generator for probing input-parsing performance (algorithmic-complexity / DoS testing)"

[dependencies]
thiserror = { workspace = true }
