[package]
name = "loadr-record"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Session recorder: a capturing HTTP(S) proxy that turns live traffic into an auto-correlated loadr scenario"

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
loadr-convert = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
