[package]
name = "loadr-plugin-example-native-data-source"
description = "Example native data-source plugin: generates Ed25519-signed transaction bytes on demand"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "native_data_source"
crate-type = ["cdylib"]

[dependencies]
loadr-plugin-api = { path = "../../../crates/loadr-plugin-api" }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
